# Tetris

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
ext/: CMakeLists.txt
src/: main.cpp  settings.ixx
src/tetris/: bag.ixx  board.ixx  color.ixx  direction.ixx  events.ixx  tetris.ixx  tetromino.ixx  turn.ixx  type.ixx  well.ixx
src/utils/: map.ixx  modulo.ixx  point.ixx  size.ixx  utils.ixx
